--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,10 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="104dp"
-        android:layout_height="46dp"
+        android:layout_width="165dp"
+        android:layout_height="52dp"
         android:layout_marginTop="12dp"
-        android:text="9x12"
+        android:text="Автомашина"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.159"
@@ -34,10 +34,10 @@
 
     <CheckBox
         android:id="@+id/checkBox3"
-        android:layout_width="103dp"
-        android:layout_height="47dp"
+        android:layout_width="150dp"
+        android:layout_height="43dp"
         android:layout_marginTop="12dp"
-        android:text="18x24"
+        android:text="Автобус"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.159"
@@ -46,10 +46,10 @@
 
     <CheckBox
         android:id="@+id/checkBox2"
-        android:layout_width="103dp"
-        android:layout_height="47dp"
+        android:layout_width="168dp"
+        android:layout_height="43dp"
         android:layout_marginTop="12dp"
-        android:text="10x15"
+        android:text="Минивэн"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.159"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Формат"
+        android:text="Транспорт"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="100 рублей"
+        android:text="2000 рублей"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="150 рублей"
+        android:text="2500 рублей"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="300 рублей"
+        android:text="3500 рублей"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -134,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="248dp"
-        android:text="Количество:"
+        android:text="Количество часов:"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.265"
