--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="168dp"
+        android:layout_height="56dp"
         android:text="К оплате:"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
